0024047: Exception in TPrsStd_AISPresentation during destruction of TDocStd_Document

Adding test case for this fix
Modification in order to avoid exception during destruction of AIS_InteractiveContext
Small modification for trihedron
Small modifications to avoid regressions
Cosmetic modification